@@ -145,15 +145,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
                   (trunk works, modulo CHANGES)
      +1: ylavic, icing, jim
 
-  *) mod_http2: enable re-use of slave connections again. Fixed slave connection
-     keepalives counter. [Stefan Eissing]
-     trunk patch: http://svn.apache.org/r1852038
-                  http://svn.apache.org/r1852101
-     2.4.x patch: https://svn.apache.org/repos/asf/httpd/httpd/patches/2.4.x/h2-slave-keepalives.patch
-     +1: icing, ylavic, jim
-
-
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
